--- a/html/events/forms/prayer.html
+++ b/html/events/forms/prayer.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CHURCH</title>
+  <title>Prayer Meeting | Schedule</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../../../css/styles.css">
@@ -47,9 +47,7 @@
   </section>
 
   <main class="content form-page">
-    <!-- <div class="former">
 
-    </div> -->
     <div>
       <header class="section-header">
         <h2 class="section-heading">Schedule Prayer Meeting</h2>
