--- a/html/activities/activity-form.html
+++ b/html/activities/activity-form.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CHURCH</title>
+  <title>Activity | Schedule</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../../css/styles.css">
