--- a/html/events/details/marriage.html
+++ b/html/events/details/marriage.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CHURCH</title>
+  <title>Marriage | Event</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../../../css/styles.css">
