--- a/html/events/details/other.html
+++ b/html/events/details/other.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CHURCH</title>
+  <title>Other Event | Event</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../../../css/styles.css">
@@ -58,7 +58,7 @@
 
         <div class="row-flex">
           <span class="col-8">
-            <label label for="">Name</label>
+            <label label for="">Event Name</label>
             <input class="input" type="text" name="" value="" placeholder="Insert event name">
           </span>
 
