--- a/html/events/details/practice.html
+++ b/html/events/details/practice.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CHURCH</title>
+  <title>Practice | Event</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../../../css/styles.css">
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -23,8 +23,8 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">CHURCH</h1>
+        <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
+        <h1 class="navbar-brand-text">Church</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -39,54 +39,69 @@
         </li>
       </ul>
 
-      <div class="grid-bottom-container">
+      <div class="bottom-navbar-container">
         <hr class="nav-divider">
         <a class="nav-link" href="../../../index.html">Logout</a>
       </div>
     </nav>
   </section>
 
-  <main class="content content-fill">
-    <div class="details-page form-page">
+  <main class="content details-page">
 
-      <div>
-        <header class="section-header">
-          <h2 class="section-heading">Choir Practice</h2>
-          <hr>
-        </header>
+    <div>
+      <header class="section-header">
+        <h2 class="section-heading">Practice | Name</h2>
+        <hr>
+      </header>
 
-        <form class="form-container" action="" method="post" id="practiceDetails">
+      <form class="form-container" action="" method="post" id="practiceDetails">
+        <div class="row-flex">
+          <span class="col-8">
+            <label label for="">Practice Title</label>
+            <input class="input" type="text" name="" value="" placeholder="Insert event name">
+          </span>
 
-          <label label for="">Location</label>
-          <input class="input" type="text" name="" value="" placeholder="Insert location here">
-          <label label for="">Organizer</label>
-          <input class="input" type="text" name="" value="" placeholder="Insert organizer's name here">
+          <span class="col-4">
+            <label>Registry Number</label>
+            <input class="input" type="number" placeholder="Enter contact number" required>
+          </span>
 
-          <div class="row">
-            <span>
-              <label>Date</label>
-              <input class="input" type="date" required>
-            </span>
+          <span class="col-12">
+            <label label for="">Location</label>
+            <input class="input" type="text" name="" value="" placeholder="Insert location here">
+          </span>
 
+          <span class="col-8">
+            <label label for="">Host's Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Insert organizer's name here">
+          </span>
+
+          <span class="col-4">
+            <label>Contact Number</label>
+            <input class="input" type="number" placeholder="Enter contact number" required>
+          </span>
+
+          <span class="col-9">
+            <label>Practice Purpose and Needs</label>
+            <textarea class="input textarea" name="name" rows="10"></textarea>
+          </span>
+
+          <span class="col-3">
             <span>
               <label>Time</label>
               <input class="input" type="Time" required>
             </span>
-          </div>
 
-          <label>Description</label>
-          <textarea class="input textarea" name="name" rows="5"></textarea>
+            <span>
+              <label>Date</label>
+              <input class="input" type="date" required>
+            </span>
+          </span>
 
-        </form>
-      </div>
+        </div>
 
-      <div class="side-to-side">
-        <button class="btn btn-outline btn-secondary" onclick="changePage('../index.html')">Cancel</button>
-        <!-- <button class="btn" type="submit" onclick="" form="practiceDetails">Save</button> -->
-        <button class="btn" type="submit" onclick="changePage('../index.html')">Save</button>
-      </div>
+      </form>
     </div>
-
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
