--- a/html/events/forms/anniversary.html
+++ b/html/events/forms/anniversary.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CHURCH</title>
+  <title>Anniversary | Schedule</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../../../css/styles.css">
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -23,8 +23,8 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">CHURCH</h1>
+        <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
+        <h1 class="navbar-brand-text">Church</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -39,7 +39,7 @@
         </li>
       </ul>
 
-      <div class="grid-bottom-container">
+      <div class="bottom-navbar-container">
         <hr class="nav-divider">
         <a class="nav-link" href="../../../index.html">Logout</a>
       </div>
@@ -47,59 +47,41 @@
   </section>
 
   <main class="content form-page">
-    <!-- <div class="former">
-
-    </div> -->
     <div>
       <header class="section-header">
-        <h2 class="section-heading">New Anniversary</h2>
+        <h2 class="section-heading">Schedule Anniversary</h2>
         <hr>
       </header>
 
-      <form class="form-container" action="" method="post" id="anniversaryScheduleForm">
+      <form method="post" id="anniversaryScheduleForm">
 
-        <div class="row">
-          <div class="">
-            <label>Anniverdary Title</label>
-            <input class="input" type="text" placeholder="Enter Anniverdary Title" required>
+        <label>Anniverdary Title</label>
+        <input class="input" type="text" required>
 
-            <label>Description</label>
-            <textarea class="input textarea" name="name" rows="9"></textarea>
-          </div>
+        <label>Location</label>
+        <input class="input" type="text" required>
 
-          <div class="">
-
+        <div class="row-flex">
+          <span class="col-8">
             <label for="">Organizer</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-
-            <label>Telephone No.</label>
-            <input class="input" type="number" placeholder="Enter contact number" required>
-
-            <label>Location</label>
-            <input class="input" type="text" placeholder="Enter location" required>
-
-            <span class="row">
-              <span>
-                <label>Date</label>
-                <input class="input" type="date"required>
-              </span>
-
-              <span>
-                <label>Time</label>
-                <input class="input" type="Time" required>
-              </span>
+            <input class="input" type="text">
           </span>
 
-          </div>
+          <span class="col-4">
+            <label>Contact Number</label>
+            <input class="input" type="number" required>
+          </span>
         </div>
+
+        <label>Description</label>
+        <textarea class="input textarea" name="name" rows="8"></textarea>
 
       </form>
     </div>
 
-    <div class="side-to-side">
-      <button class="btn btn-outline btn-secondary" onclick="changePage('../index.html')">Cancel</button>
-      <!-- <button class="btn" type="submit" onclick="" form="anniversaryScheduleForm">Submit</button> -->
-      <button class="btn" type="submit" onclick="changePage('../index.html')">Submit</button>
+    <div class="form-actions row-flex">
+      <button class="btn col-5" type="submit" onclick="changePage('../index.html')">Submit</button>
+      <a class="btn-secondary col-5" href="../index.html">Cancel</a>
     </div>
 
 
